# higher_order_embedded_fem

./: .gitattributes  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
errata/tex/: .gitignore  errata.tex
experiments/armadillo_slingshot/: run_experiments.py
experiments/convergence_rate/: run_experiments.py
experiments/cylinder_shell/: run_experiments.py
experiments/hollow_ball/: run_experiments.py
fcm_convergence/: Cargo.toml
fcm_convergence/src/: main.rs
fenris/: Cargo.toml
fenris/benches/: assembly.rs
fenris/examples/: embed_mesh_3d.rs  meshgen.rs  poisson.rs  poisson_mms.rs  polymesh_intersection.rs
fenris/examples/poisson_common/: mod.rs
fenris/src/: allocators.rs  assembly.rs  cg.rs  connectivity.rs  element.rs  error.rs  lib.rs  lp_solvers.rs  mesh.rs  mesh_convert.rs  model.rs  proptest.rs  quadrature.rs  reorder.rs  rtree.rs  space.rs  space_impl.rs  sparse.rs  util.rs
fenris/src/embedding/: embedding2d.rs  embedding3d.rs  mod.rs  quadrature_reduction.rs
fenris/src/geometry/: mod.rs  polygon.rs  polymesh.rs  polytope.rs  procedural.rs  proptest_strategies.rs  sdf.rs  vtk.rs
fenris/src/solid/: assembly.rs  impl_model.rs  materials.rs  mod.rs
fenris/tests/: integration.rs  unit.rs
fenris/tests/integration_tests/: assembly.rs  cg_fem.rs  embedding.rs  mod.rs
fenris/tests/unit_tests/: assembly.rs  basis.rs  cg.rs  conversion_formulas.rs  element.rs  embedding.rs  fe_mesh.rs  geometry.rs  materials.rs  mesh.rs  mod.rs  polygon.rs  polymesh.rs  polytope.rs  reorder.rs  sparse.rs
global_stash/: Cargo.toml
global_stash/src/: lib.rs
hamilton/: Cargo.toml
hamilton/examples/: basic.rs
hamilton/src/: container.rs  entity.rs  generic_factory.rs  lib.rs  storages.rs  systems.rs
hamilton/src/container/: container_serialize.rs
hamilton/tests/: registration.rs  unit.rs
hamilton/tests/serialization/: mod.rs
hamilton2/: Cargo.toml
hamilton2/src/: calculus.rs  lib.rs  newton.rs
hamilton2/src/dynamic_system/: mod.rs  mutable.rs  stateful.rs  stateless.rs  views.rs
hamilton2/src/integrators/: euler.rs  mod.rs
hamilton2/tests/: unit.rs
hamilton2/tests/unit_tests/: calculus.rs  integrators.rs  mod.rs  newton.rs
hamilton2/tests/utils/: mod.rs
intel-mkl-src-patched/: Cargo.toml
lp-bfp/: Cargo.toml  README.md  build.rs
lp-bfp/cpp/: CMakeLists.txt  lp-bfp.cpp  lp-bfp.h
lp-bfp/src/: lib.rs
nested-vec/: Cargo.toml
notebooks/: mesh_reorder.ipynb  quadrature-simplification.ipynb  quadrature_lp.ipynb  unit_tests_analytic_solutions.ipynb
notebooks/condition_number_experiment/: condition_number_experiment.ipynb  condition_numbers.json
notebooks/convergence_rate/: convergence_rate.ipynb  convergence_rate_output.txt  hex_results.json
notebooks/quad_plots/: quad_reduc_results.json  quad_reduc_results_monomials.json  quadrature_plots.ipynb
notebooks/slingshot_iterations/: iterations.ipynb
paradis/: Cargo.toml
paradis/src/: adapter.rs  lib.rs
scene_runner/: Cargo.toml  build.rs
scene_runner/src/: lib.rs  meshes.rs
scene_runner/src/scenes/: armadillo_slingshot.rs  cantilever3d.rs  cylinder_shell.rs  helpers.rs  hollow_ball.rs  mod.rs  quad_reduc.rs  rotating_bicycle.rs
simulation_toolbox/: Cargo.toml
simulation_toolbox/src/: lib.rs  util.rs
simulation_toolbox/src/components/: mesh.rs  mod.rs
simulation_toolbox/src/fem/: bcs.rs  deformer.rs  fe_model.rs  integrator.rs  mod.rs  newton_cg.rs  schwarz_precond.rs  system_assembly.rs
simulation_toolbox/src/io/: json_helper.rs  mod.rs  msh.rs  obj.rs  ply.rs  vtk.rs
