[package]
name = "fcm_convergence"
version = "0.1.0"
authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
simulation_toolbox = { path = "../simulation_toolbox" }
fenris = { path = "../fenris" }
hamilton2 = { path = "../hamilton2" }
mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", rev="0843a0b46234cd88d7a0e7489720514624207ad9", features = [ "openmp" ] }
serde = { version="1.0", features = [ "derive" ] }
serde_json = "1.0"
rayon = "1.3"
chrono = "0.4"