[package]
name = "fenris"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"
publish = false

[features]
default = [ "proptest" ]

[dependencies]
nalgebra = { version = "0.21", features = [ "serde-serialize" ] }
alga = { version = "0.9", default-features = false }
vtkio = "0.3"
num = "0.2"
numeric_literals = "0.2.0"
itertools = "0.9"
ordered-float = "1.0"
proptest = { version = "0.9", optional = true }
rstar = "0.9.1"
rayon = "1.3"
lp-bfp = { path = "../lp-bfp" }
nested-vec = { path="../nested-vec" }
hamilton2 = { path="../hamilton2" }
# TODO: Make serde optional
serde = { version="1.0", features = [ "derive" ] }
arrayvec = "0.5.1"
log = "0.4"
paradis = { path = "../paradis" }
rustc-hash = "1.1.0"
thread_local = "1.*"
delegate = "0.6.1"

[dev-dependencies]
proptest = "0.9"
prettytable-rs = "^0.8"
matrixcompare = "0.3.0"
mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", rev="0843a0b46234cd88d7a0e7489720514624207ad9" }
paste = "0.1.7"
criterion = "0.3.2"

[[bench]]
name = "assembly"
harness = false
