[package]
name = "scene_runner"
version = "0.1.0"
authors = ["Andreas Longva"]
edition = "2018"
build = "build.rs"
default-run = "dynamic_runner"
publish = false

[dependencies]
simulation_toolbox = { path = "../simulation_toolbox" }
fenris = { path = "../fenris" }
hamilton = { path = "../hamilton" }
itertools = "0.9"
numeric_literals = "0.2"
ply-rs = "0.1.2"
structopt = "0.3"
once_cell = "1.3"
petgraph = { version = "0.5", default-features=false }
coarse-prof = "0.2"
log = "0.4"
fern = "0.6"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.12"
chrono = "0.4"
hostname = "0.3"
typetag = "0.1"
rayon = "1.3"
gnuplot = "0.0.35"
nalgebra-lapack= { version="0.13", default-features=false, features = ["intel-mkl"] }
mkl-corrode = { git = "https://github.com/Andlon/mkl-corrode.git", rev="0843a0b46234cd88d7a0e7489720514624207ad9", features = [ "openmp" ] }
global_stash = { path = "../global_stash" }

[build-dependencies]
chrono = "0.4"
hostname = "0.3"
ignore = "0.4"
